added 9 successfully UnitTests for TourViewModel